...
        android:paddingEnd="10dp"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/result_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp" />

</LinearLayout>
